tests/negative/bad_continue.def
// Unit test for a bad continue -- continue specified outside of any
// relevant scope.

def foo () -> void
begin
    continue;
end
